--- a/ui/app/views/auth/signup.html
+++ b/ui/app/views/auth/signup.html
@@ -13,13 +13,13 @@
                 <form ng-submit="signup()">
                     <div class="col-lg-12">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="First Name" ng-model="first_name" autofocus required>
+                            <input class="form-control" type="text" placeholder="First Name" ng-model="firstName" autofocus required>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Last Name" ng-model="last_name" required>
+                            <input class="form-control" type="text" placeholder="Last Name" ng-model="lastName" required>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="email" placeholder="Email" ng-model="signup_email" required>
+                            <input class="form-control" type="email" placeholder="Email" ng-model="userEmail" required>
                         </div>
                         <div class="form-group">
                             <input class="form-control" type="password" placeholder="Password" ng-model="password" required>
