--- a/ui/app/views/deployments/history.html
+++ b/ui/app/views/deployments/history.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-lg-3 text-center">
                     <span class="apollo-form-headline">User</span> <br>
-                    <select class="form-control apollo-filter" ng-model="userSearch" ng-options="user.email for user in allUsers">
+                    <select class="form-control apollo-filter" ng-model="userSearch" ng-options="user.userEmail for user in allUsers">
                         <option value="">-- choose user --</option>
                     </select>
                 </div>
@@ -38,7 +38,7 @@
                     <span class="apollo-form-headline">Status</span> <br>
                     <select class="form-control apollo-filter" ng-model="statusSearch">
                         <option value="" selected>-- choose status --</option>
-                        <option ng-repeat="deployment in allDeployments | unique: 'deployment_status'" value="{{deployment.deployment_status}}">{{deployment.deployment_status}}</option>
+                        <option ng-repeat="deployment in allDeployments | unique: 'deployment_status'" value="{{deployment.status}}">{{deployment.status}}</option>
                     </select>
                 </div>
             </div>
@@ -66,16 +66,16 @@
                         </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="deployment in allDeployments | filter:{deployment_status: statusSearch} |
-                                                                          filter:{deployed_service: serviceSearch.id} |
-                                                                          filter:{deployed_environment: environmentSearch.id} |
-                                                                          filter:{initiated_by: userSearch.id}">
+                            <tr ng-repeat="deployment in allDeployments | filter:{status: statusSearch} |
+                                                                          filter:{serviceId: serviceSearch.id} |
+                                                                          filter:{environmentId: environmentSearch.id} |
+                                                                          filter:{userEmail: userSearch.id}">
                             <td>{{deployment.id}}</td>
-                            <td>{{deployment.last_updated | date:'dd/MM/yy H:mm:ss'}}</td>
-                            <td>{{allServices[deployment.deployed_service].name}}</td>
-                            <td>{{allEnvironments[deployment.deployed_environment].name}}</td>
-                            <td>{{allUsers[deployment.initiated_by].email}}</td>
-                            <td><span class="label" ng-class="getLabel(deployment.deployment_status)">{{deployment.deployment_status}}</span></td>
+                            <td>{{deployment.lastUpdate | date:'dd/MM/yy H:mm:ss'}}</td>
+                            <td>{{allServices[deployment.serviceId].name}}</td>
+                            <td>{{allEnvironments[deployment.environmentId].name}}</td>
+                            <td>{{allUsers[deployment.userEmail].userEmail}}</td>
+                            <td><span class="label" ng-class="getLabel(deployment.status)">{{deployment.status}}</span></td>
                             <td>
                                 <button type="button" class="btn btn-primary btn-circle" uib-tooltip="Details"
                                         ng-click="setSelectedDeployment(deployment); showDetails()"
@@ -131,13 +131,13 @@
                     <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="details-spinner"></span>
                     <table class="table">
                         <tr>
-                            <td>Commit Sha</td><td><a href="{{githubResponse.html_url}}">{{githubResponse.sha | limitTo: 7}}</td>
+                            <td>Commit Sha</td><td><a href="{{deployableVersion.commitUrl}}">{{deployableVersion.gitCommitSha | limitTo: 7}}</a></td>
                         </tr>
                         <tr>
-                            <td>Commit Author</td><td><img class="apollo-committer-image" ng-src="{{githubResponse.author.avatar_url}}">{{githubResponse.author.login}}</td>
+                            <td>Commit Author</td><td><img class="apollo-committer-image" ng-src="{{deployableVersion.committerAvatarUrl}}">{{deployableVersion.committerName}}</td>
                         </tr>
                         <tr>
-                            <td>Commit Message</td><td>{{githubResponse.commit.message}}</td>
+                            <td>Commit Message</td><td>{{deployableVersion.commitMessage}}</td>
                         </tr>
                     </table>
                 </div>
