--- a/ui/app/views/deployments/home.html
+++ b/ui/app/views/deployments/home.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Environment Overview</h1>
+            <h1 class="page-header">Environment Overview (Still mocks..)</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -29,7 +29,7 @@
         <div class="col-lg-12 col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Mesos Slaves
+                    Kubernetes Nodes
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -37,25 +37,25 @@
                         <table class="table table-hover">
                             <thead>
                             <tr>
-                                <th>Slave ID</th>
-                                <th>Slave Role</th>
-                                <th>Slave IP</th>
+                                <th>Node Name</th>
+                                <th>Node Role</th>
+                                <th>Node IP</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
                                 <td>680cb1f8-7ba2-4bed-97f8-e7caca7b8c45-S12</td>
-                                <td>Private</td>
+                                <td>Master</td>
                                 <td>10.0.0.1</td>
                             </tr>
                             <tr>
                                 <td>680cb1f8-7ba2-4bed-97f8-e7caca7b8c45-S11</td>
-                                <td>Public</td>
+                                <td>Worker</td>
                                 <td>10.0.0.2</td>
                             </tr>
                             <tr>
                                 <td>680cb1f8-7ba2-4bed-97f8-e7caca7b8c45-S10</td>
-                                <td>Private</td>
+                                <td>Worker</td>
                                 <td>10.0.0.3</td>
                             </tr>
                             </tbody>
