--- a/ui/app/views/deployments/history.html
+++ b/ui/app/views/deployments/history.html
@@ -5,6 +5,8 @@
         </div>
         <!-- /.col-lg-12 -->
     </div>
+
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="revert-spinner"></span>
     <div class="col-lg-12 col-sm-12">
         <div class="panel panel-default">
             <div class="panel-heading apollo-form-headline">
@@ -38,7 +40,7 @@
                     <span class="apollo-form-headline">Status</span> <br>
                     <select class="form-control apollo-filter" ng-model="statusSearch">
                         <option value="" selected>-- choose status --</option>
-                        <option ng-repeat="deployment in allDeployments | unique: 'deployment_status'" value="{{deployment.status}}">{{deployment.status}}</option>
+                        <option ng-repeat="deployment in allDeployments | unique: 'status'" value="{{deployment.status}}">{{deployment.status}}</option>
                     </select>
                 </div>
             </div>
@@ -69,7 +71,8 @@
                             <tr ng-repeat="deployment in allDeployments | filter:{status: statusSearch} |
                                                                           filter:{serviceId: serviceSearch.id} |
                                                                           filter:{environmentId: environmentSearch.id} |
-                                                                          filter:{userEmail: userSearch.id}">
+                                                                          filter:{userEmail: userSearch.id} |
+                                                                          orderBy: 'deploymentLastUpdate': true">
                             <td>{{deployment.id}}</td>
                             <td>{{deployment.lastUpdate | date:'dd/MM/yy H:mm:ss'}}</td>
                             <td>{{allServices[deployment.serviceId].name}}</td>
