Bugfix local run mode and filtering out deployments that are not matching my selected service

--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -101,7 +101,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter:globalSearch | orderBy:'deployableVersion.commitDate':true"
+                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter:globalSearch | filter: {serviceId: serviceSelected.id} | orderBy:'deployableVersion.commitDate':true"
                                 ng-click="setSelectedVersion(deployableVersion)"
                                 ng-class="{'active':deployableVersion.gitCommitSha == versionSelected.gitCommitSha}">
                                 <td>{{deployableVersion.commitDate | date:'dd/MM/yy H:mm:ss'}}</td>
