--- a/ui/app/views/deployments/home.html
+++ b/ui/app/views/deployments/home.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Environment Overview (Still mocks..)</h1>
+            <h1 class="page-header">Environment Overview (Still mocks...)</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
