Change tables to use datatables for auto pagination and filtering

--- a/ui/app/views/deployments/history.html
+++ b/ui/app/views/deployments/history.html
@@ -54,8 +54,8 @@
                 Past & Current Deployments
             </div>
             <div class="panel-body">
-                <div class="table-responsive">
-                    <table class="table">
+                <div class="">
+                    <table class="table table-responsive" datatable="ng" dt-options="dtOptions" dt-column-defs="dtColumnDefs">
                         <thead>
                         <tr>
                             <th>#</th>
