--- a/ui/app/views/deployments/ongoing.html
+++ b/ui/app/views/deployments/ongoing.html
@@ -13,7 +13,7 @@
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table" datatable="ng" dt-options="dtOptions">
                         <thead>
                         <tr>
                             <th>Last Updated</th>
