--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-hover" datatable="ng" dt-options="dtOptions">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-hover" datatable="ng" dt-options="dtOptions">
                             <thead>
                             <tr>
                                 <th>Name</th>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-hover" datatable="ng" dt-options="dtOptionsDeployableVersion">
                             <thead>
                             <tr>
                                 <th>Date</th>
