Change hour format to HH

--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -101,7 +101,7 @@
                             <tr ng-repeat="deployableVersion in allDeployableVersions | filter:globalSearch | filter: {serviceId: serviceSelected.id} | orderBy:'deployableVersion.commitDate':true"
                                 ng-click="setSelectedVersion(deployableVersion)"
                                 ng-class="{'active':deployableVersion.gitCommitSha == versionSelected.gitCommitSha}">
-                                <td>{{deployableVersion.commitDate | date:'dd/MM/yy H:mm:ss'}}</td>
+                                <td>{{deployableVersion.commitDate | date:'dd/MM/yy HH:mm:ss'}}</td>
                                 <td><a target="_blank" href="{{deployableVersion.commitUrl}}">{{deployableVersion.gitCommitSha | limitTo: 7}}</a></td>
                                 <td>{{deployableVersion.commitMessage}}</td>
                                 <td><span><img class="apollo-committer-image" ng-src="{{deployableVersion.committerAvatarUrl}}">{{deployableVersion.committerName}}</span></td>
