--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table class="table table-hover" datatable="ng" dt-options="dtOptionsDeployableVersion">
+                        <table class="table table-hover" datatable="ng" dt-options="dtOptionsDeployableVersion" dt-column-defs="dtColumnDefsDeployableVersion">
                             <thead>
                             <tr>
                                 <th>Date</th>
@@ -98,7 +98,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter:globalSearch | filter: {serviceId: serviceSelected.id} | orderBy:'deployableVersion.commitDate':true"
+                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter:globalSearch | filter: {serviceId: serviceSelected.id}"
                                 ng-click="setSelectedVersion(deployableVersion)"
                                 ng-class="{'active':deployableVersion.gitCommitSha == versionSelected.gitCommitSha}">
                                 <td>{{deployableVersion.commitDate | date:'dd/MM/yy HH:mm:ss'}}</td>
