--- a/ui/app/views/service/configure.html
+++ b/ui/app/views/service/configure.html
@@ -1,18 +1,28 @@
 <div>
     <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Services Configuration</h1>
+        <div class="col-lg-offset-12 col-lg-12">
+            <h1 class="page-header">Service Configuration</h1>
         </div>
         <!-- /.col-lg-12 -->
-    </div>
 
-
-    <!-- /.panel -->
-    <div class="row">
-        <h4>Want you to have something to wait for in future versions, so no.</h4>
-    </div>
-    <div class="row">
-
+        <div class="col-lg-offset-12 col-lg-12">
+            <form name="serviceForm" ng-submit="save()">
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Name" ng-model="name" name="name" autofocus required>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Deployment YAML" ng-model="deploymentYaml" name="deploymentYaml" required rows="10"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Service YAML" ng-model="serviceYaml" name="serviceYaml" required rows="5"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input ng-disabled="buttonDisabled || serviceForm.$invalid" class="btn btn-success" type="submit" value="Save">
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <!-- /.row -->
 </div>
