Update service configure ui

--- a/ui/app/views/service/configure.html
+++ b/ui/app/views/service/configure.html
@@ -1,11 +1,11 @@
 <div>
     <div class="row">
-        <div class="col-lg-offset-12 col-lg-12">
+        <div class="col-lg-12">
             <h1 class="page-header">Service Configuration</h1>
         </div>
         <!-- /.col-lg-12 -->
 
-        <div class="col-lg-offset-12 col-lg-12">
+        <div class="col-lg-12">
             <form name="serviceForm" ng-submit="save()">
                 <div class="col-lg-12">
                     <div class="form-group">
