--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -62,7 +62,7 @@
                             <tr ng-repeat="service in allServices | filter:globalSearch"
                                 ng-click="setSelectedService(service)"
                                 ng-dblclick="nextStep()"
-                                ng-class="{'active':service.id == serviceSelected.id}">
+                                ng-class="{'active':service.id == selectedService.id}">
                                 <td>{{service.name}}</td>
                                 <td>
                                     <button type="button" class="btn btn-primary" uib-tooltip="See kubernetes deployment YAML"
@@ -100,7 +100,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter: {serviceId: serviceSelected.id} : true"
+                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter: {serviceId: selectedService.id} : true"
                                 ng-click="setSelectedVersion(deployableVersion)"
                                 ng-dblclick="nextStep()"
                                 ng-class="{'active':deployableVersion.gitCommitSha == versionSelected.gitCommitSha}">
@@ -121,7 +121,7 @@
             <div class="well">
                 <h4>So just making sure</h4>
                 <p> You are going to deploy commit <b>{{versionSelected.gitCommitSha}}</b><br>
-                    to service <b>{{serviceSelected.name}}</b><br>
+                    to service <b>{{selectedService.name}}</b><br>
                     on environment <b>{{environmentSelected.name}}</b></p>
                 <br>
                 <button class="btn btn-default btn-lg center-block" data-toggle="modal" data-target="#confirm-modal">That is correct</button>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="modal-body">
                     <pre class="apollo-logs">
-{{serviceSelected.deploymentYaml}}
+{{selectedService.deploymentYaml}}
                     </pre>
                 </div>
                 <div class="modal-footer">
@@ -183,7 +183,7 @@
                 </div>
                 <div class="modal-body">
                     <pre class="apollo-logs">
-{{serviceSelected.serviceYaml}}
+{{selectedService.serviceYaml}}
                     </pre>
                 </div>
                 <div class="modal-footer">
