--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -100,7 +100,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="deployableVersion in allDeployableVersions"
+                            <tr ng-repeat="deployableVersion in allDeployableVersions | filter: {serviceId: serviceSelected.id} : true"
                                 ng-click="setSelectedVersion(deployableVersion)"
                                 ng-dblclick="nextStep()"
                                 ng-class="{'active':deployableVersion.gitCommitSha == versionSelected.gitCommitSha}">
